<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.controlledsenility.android.caprica.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat" />

    <TextView
        android:id="@+id/latVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/lat"
        android:text="@string/latVal" />

    <TextView
        android:id="@+id/lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lat"
        android:text="@string/lng" />

    <TextView
        android:id="@+id/lngVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lat"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/lng"
        android:text="@string/lngVal" />

    <Button
        android:id="@+id/takeOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lng"
        android:layout_below="@id/lng"
        android:layout_marginTop="96dp"
        android:text="@string/takeOff" />

    <Button
        android:id="@+id/land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/takeOff"
        android:layout_alignBottom="@id/takeOff"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:text="@string/land" />

    <Switch
        android:id="@+id/followMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takeOff"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/lat"
        android:text="@string/followMe" />

</RelativeLayout>